--- a/plat-pour-tous-front/package.json
+++ b/plat-pour-tous-front/package.json
@@ -11,11 +11,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
-    "@angular/cdk": "^16.2.1",
+    "@angular/cdk": "^16.2.2",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/fire": "^7.6.1",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^16.2.0",
     "@angular/material": "^16.2.1",
     "@angular/platform-browser": "^16.2.0",
